[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onlycuts"
version = "0.1.0"
description = "Local-first Telegram media pipeline for OnlyCuts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "apscheduler>=3.10",
  "python-telegram-bot>=21.4",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "structlog>=24.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["onlycuts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
